--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@nestjs/microservices": "^9.4.3"
   },
   "devDependencies": {
-    "lerna": "^7.0.2"
+    "lerna": "^7.0.2",
+    "run-script-webpack-plugin": "^0.2.0",
+    "ts-loader": "^9.4.4",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   }
 }
